# tree-sitter-janet

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/c/: tree-sitter-janet.pc.in
bindings/node/: index.js
bindings/python/tree_sitter_janet/: __init__.py
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
